<resources>
    <string name="app_name">Registration Form</string>
    <string name="reg">Registration Form</string>
    <string name="wlc">Welcome to Adventure Learning Club!</string>
    <string name="name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="m">Male</string>
    <string name="f">Female</string>
    <string name="id">Student ID</string>
    <string name="sch">School</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
</resources>
