<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Registration Form -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <!-- Welcome -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlc"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <!-- text line -->
    <View
        android:layout_width="400dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:background="#DCDCDC"/>

    <!-- Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Full Name -->
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <!-- First Name -->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName" />

        <!-- Last Name -->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <!-- Gender -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <!-- male -->
            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />

            <!-- female -->
            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- student id -->
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <!-- text line -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- school -->
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sch" />

        <!-- text line -->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- email -->
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <!-- text line -->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- phone -->
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <!-- text line -->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <!-- spacing -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text=""/>

    <!-- register button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_gravity="center"/>

</LinearLayout>
